--- a/index.html
+++ b/index.html
@@ -231,28 +231,28 @@
                 <!-- View 1: Home Page -->
                 <div id="home-view" class="hidden flex-col flex-1 overflow-y-auto">
                         <header class="relative mb-6 text-center pt-4">
-                        <h1 class="text-5xl md:text-6xl font-extrabold" style="background: linear-gradient(to right, #3b82f6, #16a34a); -webkit-background-clip: text; background-clip: text; color: transparent; -webkit-text-fill-color: transparent;">ScrollEd</h1>
+                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold" style="background: linear-gradient(to right, #3b82f6, #16a34a); -webkit-background-clip: text; background-clip: text; color: transparent; -webkit-text-fill-color: transparent;">ScrollEd</h1>
                         <div class="absolute top-2 right-0 flex items-center space-x-2">
                                 <!-- Streak Counter -->
-                                <div id="streak-container" class="w-20 h-20 bg-gray-800 border border-gray-700 rounded-full flex flex-col items-center justify-center text-center p-1">
+                                <div id="streak-container" class="w-16 h-16 sm:w-20 sm:h-20 bg-gray-800 border border-gray-700 rounded-full flex flex-col items-center justify-center text-center p-1">
                                 <svg class="w-6 h-6 text-orange-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.657 7.343A8 8 0 0117.657 18.657z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1014.12 11.88l-4.242 4.242z"></path></svg>
                                 <p class="font-bold text-lg leading-tight"><span id="streak-count">0</span></p>
                                 <p class="text-xs text-gray-400 leading-tight -mt-1">Days</p>
                                 </div>
                         </div>
                         </header>
-                        <main class="space-y-6 mt-10">
+                        <main class="space-y-4 sm:space-y-6 mt-10">
                             <!-- UPDATED: Manual Note Creation First -->
-                            <div id="write-new-note-btn" class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-6 text-center cursor-pointer hover:border-purple-500 transition">
-                                <h2 class="text-2xl font-bold text-gray-100">Create a Study Guide</h2>
-                                <p class="text-gray-400 mt-1">Write your own notes and generate study sets.</p>
+                            <div id="write-new-note-btn" class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-4 sm:p-6 text-center cursor-pointer hover:border-purple-500 transition">
+                                <h2 class="text-xl sm:text-2xl font-bold text-gray-100">Create a Study Guide</h2>
+                                <p class="text-sm sm:text-base text-gray-400 mt-1">Write your own notes and generate study sets.</p>
                             </div>
 
                             <div class="text-white font-semibold text-center py-1 px-3 rounded-full bg-gray-800/50 backdrop-blur-sm self-center w-min mx-auto">OR</div>
 
-                            <div class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-6">
+                            <div class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-4 sm:p-6">
                                     <form id="topic-form">
-                                    <label for="topic-input" class="text-2xl font-bold text-gray-100 block text-center mb-4">Generate with AI</label>
+                                    <label for="topic-input" class="text-xl sm:text-2xl font-bold text-gray-100 block text-center mb-4">Generate with AI</label>
                                     <input type="text" id="topic-input" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter a Topic..." required>
                                     <div id="topic-card-count-wrapper" class="hidden mt-4">
                                             <label for="card-count-input" class="text-sm font-medium text-gray-300 block text-left mb-2">Number of Cards:</label>
@@ -262,10 +262,10 @@
                                     </form>
                             </div>
                             
-                            <div id="upload-section" class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-6 text-center">
+                            <div id="upload-section" class="bg-gray-800/80 backdrop-blur-sm border border-gray-700 rounded-2xl p-4 sm:p-6 text-center">
                                     <label for="file-upload" class="cursor-pointer">
-                                    <h2 class="text-2xl font-bold text-gray-100">Generate from PDF</h2>
-                                    <p class="text-gray-400 mt-1">Learn from your own documents.</p>
+                                    <h2 class="text-xl sm:text-2xl font-bold text-gray-100">Generate from PDF</h2>
+                                    <p class="text-sm sm:text-base text-gray-400 mt-1">Learn from your own documents.</p>
                                     <input id="file-upload" type="file" class="hidden" accept=".pdf">
                                     </label>
                                     <div id="upload-card-count-wrapper" class="hidden mt-4">
@@ -1005,6 +1005,7 @@
                                             console.error("Error generating quiz points from note:", error);
                                             btn.innerHTML = 'Quiz';
                                             btn.disabled = false;
+                                            // Add user feedback here if you want
                                         }
                                     }
                                 });
