--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 <form id="quiz-topic-form">
                                     <label for="quiz-topic-input" class="text-2xl font-bold text-gray-100 block text-center mb-4">Enter a Topic</label>
                                     <input type="text" id="quiz-topic-input" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-purple-500" placeholder="e.g., 'The Roman Empire'" required>
-                                    <button type="submit" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-lg mt-4 transition duration-300 h-12">Create Quiz</button>
+                                    <button type="submit" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-lg mt-4 transition duration-300 h-12">Create Quiz Room</button>
                                 </form>
                             </div>
                             <div class="text-gray-500 font-semibold text-center">OR</div>
@@ -2270,4 +2270,5 @@
         </script>
         </body>
         </html>
+
 
